[tool.poetry]
name = "blackjack-env"
version = "0.0.1"
description = "Development of a black jack game, by Kalebe Szlachta."
authors = ["KalebeRS <kalebeszlachta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
PySide6 = "^6.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"